<resources>
    <string name="app_name">ProyectApp</string>
    <string name="guardar">Guardar</string>
    <string name="m_sculo_trabajado">Músculo trabajado</string>
    <string name="nombre_del_ejercicio">Nombre del ejercicio</string>
    <string name="descripci_n_y_notas">Descripción y notas</string>
    <string name="n_de_repeticiones">Nº de repeticiones</string>
    <string name="n_de_series">Nº de series</string>
    <string name="guardar_rutina">Guardar rutina</string>
    <string name="ver_mis_rutinas">Ver mis rutinas</string>
    <string name="todo">TODO</string>
    <string name="ver_todos_los_ejercicios">Ver todos los ejercicios</string>
    <string name="un_ejemplo_ser_a_divididarla_por_grupos_musculares_cercanos_la_rutina_ppl_la_divides_en_3_d_as_dia_de_push_pecho_hombro_triceps_dia_de_pull_espalda_biceps_d_a_de_pierna">Un ejemplo sería divididarla por grupos musculares cercanos, la rutina PPL. La divides en 3 días, dia de Push(Pecho,hombro,triceps), dia de Pull(Espalda, biceps), Día de Pierna</string>
    <string name="bienvenido_a_gymgrid_la_aplicaci_n_perfecta_para_crear_rutinas_y_ejercicios_adaptados_a_tus_posibilidades_y_necesidades">La aplicación perfecta para crear rutinas y ejercicios personalizados, adaptados a tus gustos y necesidades</string>
    <string name="cuando_hagas_tu_rutina_recuerda_adaptarla_a_tus_objetivos_y_dias_a_la_semana_que_puedas_ir">Cuando hagas tu rutina, recuerda adaptarla a tus objetivos y dias a la semana que puedas ir</string>
    <string name="gymgrid">GymGrid</string>
    <string name="deletebutton">deletebutton</string>
    <string name="buttonedit">buttonedit</string>
    <string name="m_sculo">Músculo:</string>
    <string name="series">Series:</string>
    <string name="repeticiones">Repeticiones:</string>
    <string name="pecho">Pecho</string>
    <string name="nombre_ejercicio">Nombre Ejercicio</string>
    <string name="_10">10</string>
    <string name="_3">3</string>
    <string name="notas">Notas</string>
    <string name="buttonAddToRoutine">buttonAddToRoutine</string>
    <string name="buttonRemoveFromRoutine">buttonRemoveFromRoutine</string>
    <string name="mu_sculo">Músculo:</string>
    <string name="series_">Series:</string>
    <string name="repeticiones_">Repeticiones:</string>
    <string name="pecho_">Pecho</string>
    <string name="nombre_ejercicio_">Nombre Ejercicio</string>
    <string name="_10_">10</string>
    <string name="_3_">3</string>
    <string name="notas_">Notas</string>
    <string name="buttonDeleteRoutine">buttonDeleteRoutine</string>
    <string name="buttonEditRoutine">buttonEditRoutine</string>
    <string name="buttonViewExercises">buttonViewExercises</string>
    <string name="nombre_rutina">Nombre rutina</string>
    <string name="background">background</string>
    <string name="gymgrid_">GYMGRID</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="inicia_sesi_n_con_tus_creedenciales">Inicia sesión con tus creedenciales</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="item">Item</string>
</resources>