<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/nombre_rutina"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/buttonDeleteRoutine"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/buttonDeleteRoutine"
        app:layout_constraintBottom_toBottomOf="@+id/textViewName"
        app:layout_constraintEnd_toStartOf="@+id/buttonEditRoutine"
        app:layout_constraintTop_toTopOf="@+id/textViewName"
        app:srcCompat="@drawable/delete_24px" />

    <ImageView
        android:id="@+id/buttonEditRoutine"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/buttonEditRoutine"
        app:layout_constraintBottom_toBottomOf="@+id/buttonDeleteRoutine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonDeleteRoutine"
        app:srcCompat="@drawable/edit_24px" />

    <ImageView
        android:id="@+id/buttonViewExercises"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/buttonViewExercises"
        app:layout_constraintStart_toStartOf="@+id/textViewName"
        app:layout_constraintTop_toBottomOf="@+id/textViewName"
        app:srcCompat="@drawable/eye_icon"
        tools:ignore="ImageContrastCheck" />

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonViewExercises" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="Ver ejercicios"
        app:layout_constraintBottom_toBottomOf="@+id/buttonViewExercises"
        app:layout_constraintStart_toEndOf="@+id/buttonViewExercises"
        app:layout_constraintTop_toTopOf="@+id/buttonViewExercises" />

</androidx.constraintlayout.widget.ConstraintLayout>